live single event title no longer overlapping sidebar

--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -1366,7 +1366,6 @@ ul {
 
 /* Sidebar */
 #event-single-sidebar {
-    top: -40px;
     position: relative;
 
     .event-single-datetime {
